first commit CartService logging